[package]
name = "via"
version = "0.1.0"
authors = ["Andrew Dinh <git@andrewkdinh.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrewkdinh/via"
homepage = "https://github.com/andrewkdinh/via"
license = "AGPL-3.0-or-later"
description = "An efficient text editor"
keywords = ["text", "editor"]
categories = ["command-line-utilities", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "^1.5"
regex = "^1.3"
unicode-segmentation = "^1.7.1"
